# libflac-sys

./: .gitattributes  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: main.yml
bindgen/: README  run-bindgen.sh  wrapper.h
src/: bindings.rs  lib.rs
tests/: cuesheet.rs  ogg_support.rs  strings.rs
